# rpg_ig_active_reconstruction

./: run.txt
example/flying_gazebo_stereo_cam/: CMakeLists.txt
example/flying_gazebo_stereo_cam/config/: dome_33_views.txt  draw_camera_poses.py
example/flying_gazebo_stereo_cam/launch/: flying_gazebo_stereo_cam.launch  rviz.launch  simple_viewspace_module.launch  view_space.launch
ig_active_reconstruction/: CMakeLists.txt  package.xml
ig_active_reconstruction/include/ig_active_reconstruction/: benchmark_view_planner.hpp  robot_ros_client_rl.hpp  view_space.hpp  views_communication_interface.hpp  views_simple_view_space_module.hpp  world_representation_communication_interface.hpp
ig_active_reconstruction/src/code_base/: benchmark_view_planner.cpp  robot_ros_client_rl.cpp  view_space.cpp  views_simple_view_space_module.cpp  weighted_linear_utility.cpp
ig_active_reconstruction_msgs/: CMakeLists.txt
ig_active_reconstruction_octomap/: CMakeLists.txt
ig_active_reconstruction_octomap/include/ig_active_reconstruction_octomap/: octomap_basic_ray_ig_calculator.hpp  octomap_ig_calculator.hpp  octomap_ros_pcl_input.hpp
ig_active_reconstruction_octomap/launch/: octomap_world_representation_debug.launch
ig_active_reconstruction_octomap/src/code_base/: octomap_basic_ray_ig_calculator.inl  octomap_ros_pcl_input.inl
ig_active_reconstruction_ros/: CMakeLists.txt  package.xml
ig_active_reconstruction_ros/include/ig_active_reconstruction_ros/: views_ros_client_ci.hpp  (+3 more)
ig_active_reconstruction_ros/launch/: benchmark_view_planner.launch
movements/: CMakeLists.txt
(+5 files in other folders)
